--- a/package.json
+++ b/package.json
@@ -8,3 +8,19 @@
     "express": "^5.1.0"
   }
 }
+{
+  "name": "lemonade-store",
+  "version": "1.0.0",
+  "description": "Mobile E-commerce Store",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.0",
+    "cors": "^2.8.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
+}
